@@ -44,14 +44,14 @@ define('TX_PAYMENTLIB_GATEWAYMODE_WEBSERVICE', 401);
 
 define('TX_PAYMENTLIB_TRANSACTION_STATE_AUTHORIZED', 500);
 define('TX_PAYMENTLIB_TRANSACTION_STATE_AUTHORIZE_FAILED', 501);
-define('TX_PAYMENTLIB_TRANSACTION_STATE_AUTHORIZED', 502);
-define('TX_PAYMENTLIB_TRANSACTION_STATE_AUTHORIZE_FAILED', 503);
-define('TX_PAYMENTLIB_TRANSACTION_STATE_CAPTURED', 504);
-define('TX_PAYMENTLIB_TRANSACTION_STATE_CAPTURE_FAILED', 505);
-define('TX_PAYMENTLIB_TRANSACTION_STATE_REVERSED', 506);
-define('TX_PAYMENTLIB_TRANSACTION_STATE_REVERSAL_FAILED', 507);
-define('TX_PAYMENTLIB_TRANSACTION_STATE_CREDITED', 508);
-define('TX_PAYMENTLIB_TRANSACTION_STATE_CREDIT_FAILED', 509);
+define('TX_PAYMENTLIB_TRANSACTION_STATE_CAPTURED', 502);
+define('TX_PAYMENTLIB_TRANSACTION_STATE_CAPTURE_FAILED', 503);
+define('TX_PAYMENTLIB_TRANSACTION_STATE_REVERSED', 504);
+define('TX_PAYMENTLIB_TRANSACTION_STATE_REVERSAL_FAILED', 505);
+define('TX_PAYMENTLIB_TRANSACTION_STATE_CREDITED', 506);
+define('TX_PAYMENTLIB_TRANSACTION_STATE_CREDIT_FAILED', 507);
+define('TX_PAYMENTLIB_TRANSACTION_STATE_RENEWED', 508);
+define('TX_PAYMENTLIB_TRANSACTION_STATE_RENEWAL_FAILED', 509);
 
 
 /**
